# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2005 Gentoo Technologies, Inc.

# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.555 2006/01/01 02:03:52 agaffney Exp $

*GLI-0.3 (27 Oct 2005)

  31 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIArchitectureTemplate.py:
  remove add_pkg_to_world() and copy_pkg_to_chroot()
  copy installer.log to installer.log.failed on install failure
  src/GLIUtility.py:
  added get_keymaps()
  spawn() takes any False argument for chroot instead of just None
  src/GLIPortage.py:
  copy_pkg_to_chroot() chroot's to run ebuild is use_root=False
  change copy_pkg_to_chroot() to work properly with use_root=False

  27 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/html/*:
  converted showclients, load/saveprofile

  26 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIPortage.py:
  exclude packages already in chroot vdb from binary deplist
  chroot to use best_version for chroot's vdb
  src/runtimedeps.py:
  accept ROOT via commandline instead of env

  25 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/runtimedeps.py:
  remove passing of ROOT
  src/GLIPortage.py:
  modify get_deps() to get deptree for each package and merge into final list
  remove depgraph class
  add debugging code to get_deps()
  src/GLIArchitectureTemplate.py:
  combine code for GRP/compile in install_packages() into one block
  debugging code in install_packages()

  24 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/runtimedeps.py:
  initial commit
  src/GLIPortage.py:
  use separate script for GRP deps
  remove calls to portage module

  23 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIPortage.py:
  initial commit
  move some of portage function from GLIAT
  flipped around a few function args
  src/GLIArchitectureTemplate.py:
  revamp install_packages() for new GLIPortage

  21 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIArchitectureTemplate.py: