@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.555 2006/01/01 02:03:52 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.556 2006/01/01 03:46:04 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
@@ -15,6 +15,7 @@
   src/GLIPortage.py:
   copy_pkg_to_chroot() chroot's to run ebuild is use_root=False
   change copy_pkg_to_chroot() to work properly with use_root=False
+  figure PORTAGE_TMPDIR properly
 
   27 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/net/server/html/*:
